use JDK9 API instead of ImmutableSet, InspectionElementsMerger - use EP cache instead of using own cache
Avoid using `addChangeListener`

GitOrigin-RevId: 7c57424f8005519dee7ffc73f714d91db3c6d3a2