@@ -1,7 +1,6 @@
-// Copyright 2000-2019 JetBrains s.r.o. Use of this source code is governed by the Apache 2.0 license that can be found in the LICENSE file.
+// Copyright 2000-2020 JetBrains s.r.o. Use of this source code is governed by the Apache 2.0 license that can be found in the LICENSE file.
 package com.siyeh.ig.redundancy;
 
-import com.google.common.collect.ImmutableSet;
 import com.intellij.codeInspection.ex.InspectionElementsMergerBase;
 import com.intellij.util.ArrayUtilRt;
 import org.jdom.Element;
@@ -10,10 +9,9 @@ import org.jetbrains.annotations.NotNull;
 import java.util.Map;
 import java.util.Set;
 
-public class RedundantStringOperationMerger extends InspectionElementsMergerBase {
-
+final class RedundantStringOperationMerger extends InspectionElementsMergerBase {
   private static final String OLD_MERGER_NAME = "RedundantStringOperation";
-  private static final Set<String> OLD_SOURCE_NAMES = ImmutableSet.of("StringToString", "SubstringZero", "ConstantStringIntern");
+  private static final Set<String> OLD_SOURCE_NAMES = Set.of("StringToString", "SubstringZero", "ConstantStringIntern");
 
   @NotNull
   @Override
@@ -37,7 +35,7 @@ public class RedundantStringOperationMerger extends InspectionElementsMergerBase
 
         @Override
         public String @NotNull [] getSourceToolNames() {
-          return ArrayUtilRt.toStringArray(OLD_SOURCE_NAMES);
+          return OLD_SOURCE_NAMES.toArray(ArrayUtilRt.EMPTY_STRING_ARRAY);
         }
 
         @Override
